# skills

./: README.md  copy_skills.py  download_skill.py  install.sh  install_remote.py  install_skill.py  openclaw-explorer.py  sync.sh  upgrade-skills.sh
UGREEN/: .gitignore  CLAUDE.md
UGREEN/.GCC/: commit.md  log.md  main.md  metadata.yaml
UGREEN/.claude/: settings.json
UGREEN/claudedocs/: centrum-zarzadzania.md  network-core-sprint1.md
UGREEN/scripts/: gcc_session_start.sh
UGREEN/source/network-core/backend/: .env  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
UGREEN/source/network-core/backend/app/: config.py  main.py
UGREEN/source/network-core/backend/app/api/v1/: devices.py  discovery.py  links.py
UGREEN/source/network-core/backend/app/db/: session.py
UGREEN/source/network-core/backend/app/models/: device.py  link.py
UGREEN/source/network-core/backend/app/schemas/: device.py  link.py
UGREEN/source/network-core/backend/app/services/: device_service.py  link_service.py  nmap_service.py
UGREEN/source/network-core/backend/migrations/: env.py
UGREEN/source/network-core/backend/migrations/versions/: a1b2c3d4e5f6_add_device_status.py  c8e9f0a1b2c3_add_position_to_devices.py  d1e2f3a4b5c6_add_image_url_to_devices.py  de9e88329489_initial_devices_and_links.py
brand-context/: icp.md  positioning.md  voice-profile.md
gstack-skills/: README.md
gstack-skills/checkpoint/: SKILL.md
gstack-skills/design-consultation/: learnings.md
gstack-skills/land-and-deploy/: learnings.md
scripts/: build_tool_packs.py
sources/: README.md
(+425 files in other folders)
